--- a/07_array_cardio_2/index.html
+++ b/07_array_cardio_2/index.html
@@ -59,7 +59,8 @@ console.log(deleteComment)
 
 
 const newComments = [
-  comments.splice(index,1)
+  ...comments.splice(0,index),
+  ...comments.splice(index+1)
 ]
 console.log(newComments)
   </script>
