--- a/08 fun_with_HTML5_Canvas/index.html
+++ b/08 fun_with_HTML5_Canvas/index.html
@@ -7,6 +7,16 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  const canvas = document.querySelector('#draw');
+  const ctx = canvas.getContext('2D');
+  ctx.width= window.innerWidth;
+  ctx.height= window.height;
+  ctx.strokeStyle= "#BADA55";
+  ctx.lineJoin="round";
+  ctx.lineWidth="round"
+
+
+
 </script>
 
 <style>
