--- a/09 must_know_dev_tool /index-START.html
+++ b/09 must_know_dev_tool /index-START.html
@@ -16,18 +16,23 @@
       p.style.color = '#BADA55';
       p.style.fontSize = '50px';
     }
-
+   let a = "pop" ;
     // Regular
+    console.log("hello")
 
     // Interpolated
+    console.log(`Hello I am ${a}`)
 
     // Styled
+    console.log(` %c I am some great text`, `font-size:50px; background:red; text-shadow:2px 10px 0 blue; `)
 
     // warning!
+    console.warn("OH NOO")
 
     // Error :|
-
+   console.error('shit')
     // Info
+    console.info("Crocodiles ear 3-4 people per year")
 
     // Testing
 
