--- a/10 Hold Shift and Check Checkboxes/index-START.html
+++ b/10 Hold Shift and Check Checkboxes/index-START.html
@@ -16,10 +16,41 @@
   -->
 <div class="inbox">
   <div class="item">
-    <input classtype="checkbox">
-    <p></p>
+    <input type="checkbox">
+    <p>This is an inbox layout</p>
   </div>
-  
+  <div class="item">
+    <input type="checkbox">
+    <p>Check one item</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Hold down your Shift key</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Check a lower item</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Everything in between should also be set to checked</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Try do it without any libraries</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Just regualr JavaScript</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Good Luck!</p>
+  </div>
+  <div class="item">
+    <input type="checkbox">
+    <p>Dont'forget to tweet your result!</p>
+  </div>
 </div>
 
 <script>
