--- a/16 - Mouse Move Shadow/index.html
+++ b/16 - Mouse Move Shadow/index.html
@@ -35,6 +35,33 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero')
+  const text = hero.querySelector('h1')
+  const walk=600 //600px the shadow max stretch 
+
+  function shadow(e) {
+    console.log(e)
+    const {offsetWidth:width,offsetHeight:height}=hero
+    let{offsetX:x,offsetY:y}=e;
+
+    if( this !== e.target){
+      x=x+e.target.offsetLeft;
+      y=y+e.target.offsetHeight;
+  
+    }
+
+    const xWalk = Math.random((x / width * walk)-(walk/2))
+    const yWalk= Math.random(( y/ height * walk) - (walk/2))
+
+    text.style.textShadow=`
+    ${xWalk}px ${yWalk}px 0 red`
+  }
+
+  
+  hero.addEventListener('mousemove', shadow);
+
+
+
 </script>
 </body>
 </html>
